feat:Product Controllerlar

--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -1,5 +1,6 @@
 <%- include('includes/header') %>
 <body>
     <div>Products </div>
+    <div><%=member.member%></div>
 </body>
 <%- include('includes/footer') %>
