--- a/src/views/products.ejs
+++ b/src/views/products.ejs
@@ -2,5 +2,9 @@
 <body>
     <div>Products </div>
     <div><%=member.member%></div>
+
+    <% products.map((value,key) => { %>
+    <p><%= value.productName %> - <%= value.productSize %></p>
+    <% } ) %>
 </body>
 <%- include('includes/footer') %>
